# desafio_tikal

./: .flake8  .pre-commit-config.yaml  README.rst  docker-compose.yaml  pyproject.toml
desafio_tikal/msconsulta/: Dockerfile  consulta.py  database.py  main.py  pyproject.toml
desafio_tikal/mscrud/: Dockerfile  manage.py  pyproject.toml
desafio_tikal/mscrud/crud/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
desafio_tikal/mscrud/crud/migrations/: 0001_initial.py
desafio_tikal/mscrud/mscrud/: asgi.py  settings.py  urls.py  wsgi.py
docker/database/: Dockerfile  dump.sql
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/conf/: default.conf
tests/: test_desafio_tikal.py
