[tool.poetry]
name = "desafio_tikal"
version = "0.1.0"
description = ""
authors = ["CaMMelo <cmelo.marcelo.pereira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.6"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4.10"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
